# Giraffe

./: .clang-format  .clang-tidy  .cmakelintrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .timetracker  CMakeLists.txt  CMakePresets.json  CNAME  Giraffe.code-workspace  LICENSE.md  README.md  README_8md.html  acronyms_8md.html  adc__configuration_8cpp.html  adc__configuration_8cpp.js  adc__configuration_8cpp__incl.map  adc__configuration_8cpp__incl.md5  adc__configuration_8hpp.html  adc__configuration_8hpp.js  adc__configuration_8hpp__dep__incl.map  adc__configuration_8hpp__dep__incl.md5  adc__configuration_8hpp__incl.map  adc__configuration_8hpp__incl.md5  adc__configuration_8hpp_source.html  adc__extension__base_8hpp.html  adc__extension__base_8hpp.js  adc__extension__base_8hpp__dep__incl.map  adc__extension__base_8hpp__dep__incl.md5  adc__extension__base_8hpp__incl.map  adc__extension__base_8hpp__incl.md5  adc__extension__base_8hpp_source.html  adc__interpolation_8cpp.html  adc__interpolation_8cpp__incl.map  adc__interpolation_8cpp__incl.md5  adc__interpolation_8hpp.html  adc__interpolation_8hpp.js  adc__interpolation_8hpp__dep__incl.map  adc__interpolation_8hpp__dep__incl.md5  (+6179 more)
src/command_line_interface/: CMakeLists.txt  agent_settings.hpp  daemon.hpp  external_socket_handler.hpp  ground_software_manager.hpp  ground_station_agent.hpp  main.cpp
src/command_line_interface/ground_station_agent/: ground_station_agent.hpp
src/common/: CMakeLists.txt  agent_network.hpp  command_ids.hpp  command_ids_strings.cpp  common_logger.cpp  common_logger.hpp  data_ids.hpp  data_ids_string_map.cpp  diagnostic_id_strings.cpp  flight_modes.hpp  gfs_configuration_metadata.json  gfs_configuration_metadata.yaml  gfs_data_metadata.json  giraffe_assert.hpp  giraffe_debug_assert.cpp  giraffe_diagnostic_ids.hpp  giraffe_exception.cpp  giraffe_exception.hpp  giraffe_file_paths.cpp  giraffe_file_paths.hpp  giraffe_types.hpp  i_logger.hpp  json.hpp  node.hpp  optional_logger.hpp  protocol.cpp  protocol.h  protocol.hpp  protocol.json  socket.cpp  socket.hpp  software_version.cpp  software_version.hpp  time_types.h  time_types.hpp  units.hpp  version.js
src/common/command/: command.hpp  command_ids.hpp
src/common/curses/: ncurses_utilities.cpp  ncurses_utilities.hpp
src/common/diagnostic/: diagnostic_id_strings.cpp  diasnostic_id_strings.cpp  giraffe_assert.hpp  giraffe_debug.hpp  giraffe_debug_assert.cpp  giraffe_diagnostic_ids.hpp  giraffe_diagnostics.cpp  giraffe_diagnostics.hpp  giraffe_exception.cpp
src/common/generators/: config_gen.py  config_gen_components.py  file_gen_utils.py  ids_gen.py
src/common/metadata/: diagnostic_ids.jsonc  gfs_commands.jsonc  gfs_configuration.json  gfs_data.json  gfs_data.jsonc  gfs_data_blocks.json  gfs_log.json  gfs_log.jsonc  gfs_resources.json  protocol.json
src/common/protocol/: package.json  protocol.cpp  protocol.hpp  todo.md
src/common/tests/: CMakeLists.txt
src/data_link/: CMakeLists.txt  gdl_server.cpp  gdl_terminal.cpp  giraffe_data_link.cpp  message_queue.cpp  network_layer.cpp  physical_layer.cpp  transport_layer.cpp
src/data_link/ax25/: ax25_frames.hpp  ax25_state_machine.hpp  state_machine_data.hpp
src/data_link/include/: gdl_config_and_stats.hpp  gdl_configuration.hpp  gdl_constants.hpp  gdl_layers.hpp  gdl_message.hpp  gdl_message_queue.hpp  gdl_network_layer.hpp  gdl_network_layer_aprs.hpp  (+11 more)
src/flight_software/: CMakeLists.txt  flight_runner.cpp  flight_runner.h  flight_runner.hpp  gfs-configuration.json  main.cpp  node.h  sourcelist.CMake
src/flight_system/: CMakeLists.txt  flight_logic.cpp  flight_runner.cpp  flight_runner.hpp  flight_runner_data.cpp  flight_runner_data.hpp  giraffe_assert.hpp  main.cpp  node.h  node.hpp
src/giraffe_cli/: CMakeLists.txt  README.md  main.cpp
src/power_board_pico/: CMakeLists.txt  README.md  SerialEvent.ino  TSL2591.hpp  adc_data.hpp  external_data_dictionary.hpp  main.cpp  new_ubx.hpp  periodic_processor.hpp  power_board_comms.hpp  power_supply.hpp  sam_m8q.hpp  sd_card.hpp  software_timer.hpp  status_led.hpp
tests/: CMakeLists.txt  tcp_client.py  test-list.md  unit_test.hpp
tests/command_line_interface/: update_pack_test.cpp
tests/common/: test_diagnostics.cpp  test_protocol.cpp  test_software_version.cpp
tests/daemon/: binary_file_test.cpp  update_pack_test.cpp
tests/data_link/: test_application_layer.cpp  test_ax25_state_machine.cpp  test_full_simulator.cpp  test_gdl_message.cpp  test_gdl_with_audio.cpp  test_message_queue.cpp  test_network_layer.cpp
tests/flight_software/: CMakeLists.txt  run_test.sh  test.cpp  test.h  test_configuration.cpp
tests/flight_system/: curl_test.cpp  shared_data_helpers.hpp  test_adc_config.cpp  test_aprs_manager.cpp  test_aprs_telemetry_data_manager.cpp  test_built_in_self_test.cpp  test_command_processor.cpp  test_configuration.cpp  test_data_module.cpp  test_detection_data.cpp  test_detection_model.cpp  test_error_frame.cpp  test_extension_module.cpp  test_flight_phase_detection.cpp  test_flight_phase_manager.cpp  test_flight_phase_predictor.cpp  test_get_fc_info.cpp  test_positional.cpp  test_prediction_model.cpp  test_prediction_parameters.cpp  unit_test_extension.hpp
tests/misc/: spitest.cpp
tests/radio-board-test/: SA868.ino
tests/simulator/: CMakeLists.txt  environment.js  gfs_settings.json  gfs_sim.js  gfs_simulator.cpp  gfs_simulator.hpp  index.js  main.cpp  package.json  sim_electrical.hpp  sim_env_data.py  sim_env_data.txt  sim_environmental.cpp  sim_environmental.hpp  sim_log.hpp  sim_parameters.hpp  sim_params.json  sim_physics.cpp  sim_physics.hpp  simulated_extensions.hpp
tests/test-01/: input-1.json  test.cpp
tests/test-02/: input-1.json  test.cpp
tests/test-03/: test.cpp
tests/test-04/: test.cpp
tests/test-05/: test.cpp
tests/test-06/: test.cpp
tests/test-07/: test.cpp
tests/test-08/: test.cpp
tests/test-09/: test.cpp
tests/test-10/: test.cpp
tests/test-11/: test.cpp
tests/test-12/: test.cpp
tests/test-13/: test.cpp
tests/test-14/: ax25-test.py  test.cpp
tests/test-15/: test.cpp
(+3291 files in other folders)
